--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <version>1.0-SNAPSHOT</version>
     <modules>
         <module>provider-payment8081</module>
+        <module>consumer-order80</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -22,6 +23,7 @@
     <mysql.version>5.1.47</mysql.version>
     <druid.version>1.1.16</druid.version>
     <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
+    <lombok.version>1.16.22</lombok.version>
   </properties>
 
   <!--子模块继承之后，提供作用锁定版本+子moudle不用写groupId和version-->
@@ -63,6 +65,11 @@
               <groupId>org.mybatis.spring.boot</groupId>
               <artifactId>mybatis-spring-boot-starter</artifactId>
               <version>${mybatis.spring.boot.version}</version>
+          </dependency>
+          <dependency>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
           </dependency>
       </dependencies>
   </dependencyManagement>
