--- a/consumer-order80/pom.xml
+++ b/consumer-order80/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>consumer-order80</artifactId>
     <dependencies>
         <dependency>
+            <groupId>com.xyq</groupId>
+            <artifactId>common-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
