--- a/consumer-order80/src/main/resources/application.yml
+++ b/consumer-order80/src/main/resources/application.yml
@@ -1,9 +1,24 @@
 server:
   port: 80
 spring:
+  application:
+    name: order-service
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/xyqdatabase?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
     username: root
     password: root
+  #docker-mq 在虚拟机内
+  rabbitmq:
+    host: 192.168.2.160
+    port: 5672
+    username: guest
+    password: guest
+eureka:
+  client:
+    register-with-eureka: true
+    #false 表示自己端就是注册中心，维护服务实例，不需要检索服务
+    fetch-registry: true
+    serviceUrl:
+      defaultZone: http://localhost:7001/eureka
